--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <ul class="cabecalho-lista">
                 <li> <a href="#cursos">Cursos</a></li>
-                <li><a href="#contato">Contato</a></li>
+                <li><a href="contato.html">Contato</a></li>
                 <li><a href="#sobre">Sobre</a></li>
             </ul>
         </div>
@@ -47,13 +47,17 @@
             <div class="curso-todos">
 
                 <div class="curso-div">
-                    <img class="curso-imagem" src="assets/ensino-fundamental2.webp" alt="estudante">
-                    <h3 >Ensino Fundamental</h3>
+                    <a href="cursos/ef.html">
+                        <img class="curso-imagem" src="assets/ensino-fundamental2.webp" alt="estudante">
+                        <h3 >Ensino Fundamental</h3>
+                    </a>
                 </div>
 
                 <div class="curso-div">
-                    <img class="curso-imagem" src="assets/em.webp" alt="estudante">
-                    <h3 >Ensino Médio</h3>
+                    <a href="cursos/em.html">
+                        <img class="curso-imagem" src="assets/em.webp" alt="estudante">
+                        <h3 >Ensino Médio</h3>
+                    </a>
                 </div>
 
                 <div class="curso-div">
@@ -67,9 +71,13 @@
                 </div>
 
                 <div class="curso-div">
-                    <img class="curso-imagem" src="assets/inf.jpg" alt="estudante">
-                    <h3 class="curso-nome">Informática</h3>
+                    <a href="cursos/inf.html">
+                        <img class="curso-imagem" src="assets/inf.jpg" alt="estudante">
+                        <h3 class="curso-nome">Informática</h3>
+                    </a>
                 </div>
+
+                
             </div>
 
         </div>
