correao de links

--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
             <div class="curso-todos">
 
                 <div class="curso-div">
-                    <a href="cursos/ef.html">
+                    <a href="ef.html">
                         <img class="curso-imagem" src="assets/ensino-fundamental2.webp" alt="estudante">
                         <h3 >Ensino Fundamental</h3>
                     </a>
                 </div>
 
                 <div class="curso-div">
-                    <a href="cursos/em.html">
+                    <a href="em.html">
                         <img class="curso-imagem" src="assets/em.webp" alt="estudante">
                         <h3 >Ensino Médio</h3>
                     </a>
@@ -71,13 +71,12 @@
                 </div>
 
                 <div class="curso-div">
-                    <a href="cursos/inf.html">
+                    <a href="inf.html">
                         <img class="curso-imagem" src="assets/inf.jpg" alt="estudante">
                         <h3 class="curso-nome">Informática</h3>
                     </a>
                 </div>
 
-                
             </div>
 
         </div>
