--- a/inf.html
+++ b/inf.html
@@ -31,7 +31,7 @@
         <div class="container">
 
         <h1>INFORMATICA</h1>
-        <img src="inf.jpeg" alt="">
+        <img src="assets/inf.jpeg" alt="">
         <img src="" alt="" srcset="">
         <h1 style="margin-top: 20px; margin-bottom: 20px;">Informatica tem varias materias nela suporte,banco de dados, linguagem de programação,entre outros,temos na parte da tarde,amanhã e a noite
             O papel da informática é manter as pessoas devidamente informadas, através de uma melhor comunicação, possibilitando assim, aumentar a produtividade nos estudos e no cotidiano, empoderamento digital e conquistar melhores oportunidades no mercado de trabalho.
