--- a/inf2.html
+++ b/inf2.html
@@ -40,8 +40,7 @@
         <div class="container">
 
             <h1>Informatica</h1>
-            <img width="300px" style="display: block;" src="informatica.jpg" alt=""/>
-
+            <img width="300px" style="display: block;" src="assets/informatica.jpg" alt=""/>
 
             <h1 style="margin-top: 40px;margin-bottom: 40px;">Informatica tem varia materias nela suporte, banco de dados, linguagem de programação, entre outros e
             temos o periodo da manhã,tarde e noite. O técnico em informática tem como objetivo formar o profissional que
