correcao no fechamento de tag

--- a/inf2.html
+++ b/inf2.html
@@ -1,84 +1,97 @@
 <!DOCTYPE html>
 <html lang="pt">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Colégio Estadual Rio Branco</title>
     <!DOCTYPE html>
     <html lang="pt">
-
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Colégio Estadual Rio Branco</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    </head>
+        <link rel="stylesheet" href="style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+          href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+          rel="stylesheet"
+        />
+      </head>
 
-<body>
-    <header class="cabecalho">
-        <div class="container flex">
+      <body>
+        <header class="cabecalho">
+          <div class="container flex">
             <div class="juntar">
-                <img class="cabecalho-imagem" src="assets/logo.png" alt="logo">
-                <h1>Colégio Estadual Rio Branco</h1>
+              <img class="cabecalho-imagem" src="assets/logo.png" alt="logo" />
+              <h1>Colégio Estadual Rio Branco</h1>
             </div>
             <ul class="cabecalho-lista">
-                <li> <a href="#cursos">Cursos</a></li>
-                <li><a href="#contato">Contato</a></li>
-                <li><a href="#sobre">Sobre</a></li>
+              <li><a href="#cursos">Cursos</a></li>
+              <li><a href="#contato">Contato</a></li>
+              <li><a href="#sobre">Sobre</a></li>
             </ul>
-        </div>
-    </header>
+          </div>
+        </header>
 
-    <section class="cursos-main" id="cursos-main">
-
-        <div class="container">
-
+        <section class="cursos-main" id="cursos-main">
+          <div class="container">
             <h1>Informatica</h1>
-            <img width="300px" style="display: block;" src="assets/informatica.jpg" alt=""/>
+            <img
+              width="300px"
+              style="display: block;"
+              src="assets/informatica.jpg"
+              alt=""
+            />
 
-            <h1 style="margin-top: 40px;margin-bottom: 40px;">Informatica tem varia materias nela suporte, banco de dados, linguagem de programação, entre outros e
-            temos o periodo da manhã,tarde e noite. O técnico em informática tem como objetivo formar o profissional que
-            desempenha atividades ligadas a montagem e manutenção de microcomputadores, instalaçãõ e configuração de
-            redes, desenvolvimentos de sistemas e websites. E fazer o curso de informática te possibilita adquirir
-            compreensão sobe programas e ferramentas que podem ser úteis no seu dia a dia, como a navegação na internet,
-            a comunicação e transmissão de dado, editar e entre outros.<h1>
-
-                <ul>
-                    <li>ANÀLISES E PROJETOS </li>
-
-                    <li>BANCO DE DADOS</li>
-                    <li>INFORMATICA INSTRUMENTAL</li>
-                    <li>INGLÊS TECNICO</li>
-                    <li>INTERNET E PROGRAMAÇAO WEB</li>
-                    <li>LINGUAGEM DE PROGRAMAÇAO</li>
-                    <li>MATEMATICA APLICADA</li>
-                    <li>PRATICA DISCURSIVA E LINGUAGENS</li>
-                    <li>REDES E SISTEMAS OPERACIONAIS</li>
-                    <li>SUPORTE TECNICO</li>
-                    <li>FUNDAMENTOS E ARQUITETURA DE COMPUTADORES</li>
-
-                </ul>
+            <h1 style="margin-top: 40px;margin-bottom: 40px;">
+              Informatica tem varia materias nela suporte, banco de dados,
+              linguagem de programação, entre outros e temos o periodo da
+              manhã,tarde e noite. O técnico em informática tem como objetivo
+              formar o profissional que desempenha atividades ligadas a montagem
+              e manutenção de microcomputadores, instalaçãõ e configuração de
+              redes, desenvolvimentos de sistemas e websites. E fazer o curso de
+              informática te possibilita adquirir compreensão sobe programas e
+              ferramentas que podem ser úteis no seu dia a dia, como a navegação
+              na internet, a comunicação e transmissão de dado, editar e entre
+              outros.
             </h1>
-        </div>
-    </section>
 
-    <footer id="contato">
-        <div class="container">
-            <img class="rodape-imagem" src="assets/logoseed.jpg" alt="logo">
+            <ul>
+              <li>ANÀLISES E PROJETOS</li>
+
+              <li>BANCO DE DADOS</li>
+              <li>INFORMATICA INSTRUMENTAL</li>
+              <li>INGLÊS TECNICO</li>
+              <li>INTERNET E PROGRAMAÇAO WEB</li>
+              <li>LINGUAGEM DE PROGRAMAÇAO</li>
+              <li>MATEMATICA APLICADA</li>
+              <li>PRATICA DISCURSIVA E LINGUAGENS</li>
+              <li>REDES E SISTEMAS OPERACIONAIS</li>
+              <li>SUPORTE TECNICO</li>
+              <li>FUNDAMENTOS E ARQUITETURA DE COMPUTADORES</li>
+            </ul>
+          </div>
+        </section>
+
+        <footer id="contato">
+          <div class="container">
+            <img class="rodape-imagem" src="assets/logoseed.jpg" alt="logo" />
             <div>
-                <p>Fone: (43) 3534-1166</p>
-                <p>Rua 19 de Dezembro, 1001 </p>
-                <p>Santo Antônio da Platina - Paraná</p>
+              <p>Fone: (43) 3534-1166</p>
+              <p>Rua 19 de Dezembro, 1001</p>
+              <p>Santo Antônio da Platina - Paraná</p>
             </div>
-            <img class="rodape-imagem" src="assets/seed-parana.jpg" alt="logo">
-        </div>
-    </footer>
-</body>
-
+            <img
+              class="rodape-imagem"
+              src="assets/seed-parana.jpg"
+              alt="logo"
+            />
+          </div>
+        </footer>
+      </body>
+    </html>
+  </head>
 </html>
