--- a/contato.html
+++ b/contato.html
@@ -22,7 +22,7 @@
             <ul class="cabecalho-lista">
                 <li> <a href="#cursos">Cursos</a></li>
                 <li><a href="contato.html">Contato</a></li>
-                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
             </ul>
         </div>
     </header>
