--- a/inf.html
+++ b/inf.html
@@ -21,8 +21,8 @@
             </div>
             <ul class="cabecalho-lista">
                 <li> <a href="#cursos">Cursos</a></li>
-                <li><a href="#contato">Contato</a></li>
-                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="contato.html">Contato</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
             </ul>
         </div>
     </header>
